--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
     <div style="background:#000;">
         <div class="container">
-            <div class="row my-5 py-5">
+            <div class="row mt-5 py-5">
                 <div class="col-6 text-center text-white px-5">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, ad. Obcaecati eveniet consequatur tempore rem?</p>
                 </div>
